# Robotics_Design_Application_Coursework

./: .gitignore  AGENTS.md
LaTeX_workspace/: hw01.tex  hw03.tex  hw04.tex  hw11.tex  hw12.tex
MATLAB_workspace/: .gitignore
MATLAB_workspace/+utils/: createFigureA4.m  setDefaultGraphics.m  tab10Color.m
MATLAB_workspace/hw01_ball/: ball_spring_damping.m  ball_switch.m
MATLAB_workspace/hw02/: TSpline.m
MATLAB_workspace/hw02_IK/: TSpline.m  two_link_sim.m
MATLAB_workspace/hw03_jacobian/: Derive_Jacobian.m  my_validation.m
MATLAB_workspace/hw04_lagrange/: rhs_planar.m  rhs_planar_PD.m  two_link.m  two_link_PD.m
MATLAB_workspace/hw05_newton_euler/: derive_planar_contact.m  energy_planar_contact.m  rhs_planar_contact.m  two_link_planar_contact.m
MATLAB_workspace/hw06_floating_base/: derive_floating_base_multicontact.m  draw_floating_base_multicontact.m  energy_floating_base_multicontact.m  floating_base_multicontact.m  rhs_floating_base_multicontact.m
MATLAB_workspace/hw11_motor/: getMotorParams.m  motor_current_loop.m  motor_open_loop.m  motor_position_loop.m  motor_speed_loop.m  simulateMotorResponse.m
MATLAB_workspace/hw12_svpwm/: hw12_svpwm_main.m  plotSvpwmSectorMap.m  plotSvpwmTimingCurves.m
Python_workspace/: .gitignore
Python_workspace/hw24_PPO/: README.md  pyproject.toml
Python_workspace/hw24_PPO/hw24_ppo/: __init__.py  __main__.py  buffer.py  config.py  curriculum.py  env.py  evaluate.py  networks.py  paths.py  plot.py  storage.py  train.py  types.py  video_grid.py
Python_workspace/hw24_PPO/reference/: play-ppo-good.py  train-ppo-good.py
(+137 files in other folders)
